# ModsBeforeFriday

./: .gitignore  .gitmodules  Cargo.toml  README.md  build_agent.ps1  pnpm-lock.yaml  pnpm-workspace.yaml  watch_agent.ps1
.github/: mirror.yml
.github/workflows/: build.yml  mirror.yml
mbf-adb-killer/: Cargo.toml
mbf-adb-killer/src/: main.rs
mbf-agent/: .gitignore  AndroidManifest.xml  Cargo.toml  build.ps1  build.rs  reset_bs.ps1  run_android.ps1  watch.ps1
mbf-agent-core/: .gitignore  Cargo.toml
mbf-agent-core/src/: data_fix.rs  downgrading.rs  downloads.rs  lib.rs  manifest.rs  patching.rs  requests.rs
mbf-agent-core/src/axml/: res_ids.rs
mbf-agent-core/src/handlers/: mod.rs  mod_status.rs  utility.rs
mbf-agent-core/src/mod_man/: manifest.rs  mod.rs  util.rs
mbf-agent-core/src/models/: mod.rs  request.rs  response.rs
mbf-agent-runnable/: Cargo.toml
mbf-agent-runnable/src/: main.rs
mbf-agent-wrapper/: README.md  mbf-agent-wrapper.py
mbf-agent/src/: axml.rs  bmbf_res.rs  data_fix.rs  debug_cert.pem  diff_gen.rs  downgrading.rs  downloads.rs  external_res.rs  handlers.rs  main.rs  main_old.rs.disabled  manifest.rs  parameters.rs  patching.rs  paths.rs  requests.rs
mbf-agent/src/axml/: axml2xml.rs  mod.rs  reader.rs  res_ids.rs  writer.rs
mbf-agent/src/handlers/: import.rs  mod.rs  mod_management.rs  mod_status.rs  patching.rs  utility.rs
mbf-agent/src/mod_man/: loaded_mod.rs  lock.rs  manifest.rs  mod.rs  qmod_schema.json
mbf-agent/src/models/: request.rs
mbf-agent/src/zip/: data.rs  mod.rs  signing.rs
mbf-axml/: Cargo.toml  LICENSE  README.md
mbf-axml/src/: axml2xml.rs  lib.rs  reader.rs  writer.rs
mbf-diff-gen/: Cargo.toml  README.md
mbf-diff-gen/src/: adb.rs  external_res.rs  main.rs  models.rs
mbf-res-man/: .gitignore  Cargo.toml  README.md
mbf-res-man/apk_data/: README.md
mbf-res-man/apk_data/manifests/: 1.35.0_8016709773.xml  1.36.0_8486341502.xml  1.36.1_8647505571.xml  1.36.2_8847700518.xml  1.37.0_9064817954.xml
mbf-res-man/src/: adb.rs  default_agent.rs  diff_builder.rs  external_res.rs  hash_cache.rs  lib.rs  main.rs  models.rs  oculus_db.rs  release_editor.rs  res_cache.rs  version_grabber.rs
mbf-site/: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
mbf-site/public/: index.html  manifest.json
mbf-site/src/: AdbServerWebSocketConnector.ts  Agent.ts  AndroidManifest.ts  AnimatedBackground.tsx  App.css  App.tsx  AppMessages.tsx  BridgeManager.tsx  DeviceModder.css  DeviceModder.tsx  DeviceStore.ts  LogWindow.css  LogWindow.tsx  Logging.ts  Messages.ts  ModCard.css  ModCard.tsx  Models.tsx  ModsRepo.ts  PagePinger.tsx  Slider.css  Slider.tsx  SyncStore.ts  agent_manifest.ts  definePropertiesFromSource.tsx  game_info.ts  index.css  index.tsx  platformDetection.tsx  waitForDisconnect.ts
mbf-site/src/components/: AnimatedBackground.tsx  Collapsible.tsx  CornerMenu.tsx  CreditsModal.tsx  EditableList.tsx  IconButton.tsx  LabelledIconButton.tsx  LanguagePicker.tsx  LogWindow.tsx  ModCard.tsx  ModManager.tsx  ModRepoBrowser.tsx  ModRepoCard.tsx  Modal.tsx  OpenLogsButton.tsx  OperationModals.tsx  OptionsMenu.tsx  PermissionsMenu.tsx  SelectableList.tsx  SettingsModal.tsx  Slider.tsx  SourceLink.tsx  SplashScreenSelector.tsx
mbf-site/src/css/: AnimatedBackground.css  App.css  Collapsible.css  CornerMenu.css  DeviceModder.css  EditableList.css  IconButton.css  LabelledIconButton.css  LogWindow.css  ModCard.css  ModManager.css  ModRepoBrowser.css  ModRepoCard.css  Modal.css  OpenLogs.css  OptionsMenu.css  PermissionsMenu.css  SelectableList.css  Slider.css  SourceLink.css  index.css
mbf-site/src/hooks/: BridgeManager.tsx  DeviceConnector.tsx  useFileDropper.tsx
mbf-site/src/localization/: en.tsx  shared.ts  zh_cn.tsx
mbf-zip/: Cargo.toml  README.md
mbf-zip/src/: data.rs  lib.rs  signing.rs
