[package]
name = "mbf-agent-core"
version = "0.1.0"
edition = "2021"

[features]
request_timing = []

[dependencies]
mbf-res-man = { path = "../mbf-res-man" }
mbf-zip = { path = "../mbf-zip" }
qbsdiff = "1.4.2"
byteorder = "1.5.0"
anyhow = "1.0.86"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
semver = { version = "1.0.23", features = ["serde"] }
ureq = "2.10.0"
log = "0.4.22"
const_format = "0.2.32"
jsonschema = { version = "0.18.0", default-features = false }
xml = "0.8.20"

[build-dependencies]
ureq = "2.9.6"
rustls = "0.22.4"
