[package]
name = "mbf-agent-runnable"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mbf-agent"
path = "src/main.rs"

[dependencies]
mbf-agent-core = { path = "../mbf-agent-core" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0" 



[features]
request_timing = ["mbf-agent-core/request_timing"]