[package]
name = "mbf-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
mbf-res-man = { path = "../mbf-res-man" }
qbsdiff = "1.4.2"
rsa = { version = "0.9.6", features = ["sha2"] }
rasn = "0.15.3"
rasn-pkix = "0.15.3"
rand = "0.8.5"
byteorder = "1.5.0"
pem = "3.0.4"
anyhow = "1.0.86"
libflate = "2.1.0"
crc = "3.2.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
semver = { version = "1.0.23", features = ["serde"] }
ureq = "2.10.0"
log = "0.4.22"
const_format = "0.2.32"
jsonschema = "0.18.0"
xml = "0.8.20"

[build-dependencies]
ureq = "2.9.6"
rustls = "0.22.4"
